# agent-toolkit-bundle

./: .gitignore  CLAUDE.md  README.md  install.sh  skill-rules.json
codegraph/: README.md
docs/: agents.md  ci-compliance-gate.md  codex.md  commands.md  compatibility.md  copilot.md  data-classification.md  ecosystem.md  ethical-ai-guidelines.md  hooks.md  install-mempalace.md  installation.md  local-models.md  model-tier.md  otel-agent-tracing.md  plugins.md  prompt-retention-policy.md  rules.md  skills.md  tools.md
hooks/: check-alembic-sync.sh  codegraph-sync.sh  format-on-save.sh  inline-quality.sh  mempalace-ingest.sh  mempalace-wake-up.sh  mode-guard.sh  model-usage-summary.sh  no-ai-attribution.sh  notify.sh  observe.sh  permission-autoapprove.sh  pii-guard.sh  quality-gate.sh  security-guard.sh  setup-init.sh  skill-activation.sh  transcript-backup.sh
mempalace/: README.md  tsconfig.json
openspec/: README.md
plugins/: check-alembic-sync.ts  codegraph-sync.ts  format-on-save.ts  inline-quality.ts  mempalace-ingest.ts  mode-guard.ts  model-usage.ts  no-ai-attribution.ts  observe.ts  package.json  pii-guard.ts  quality-gate.ts  security-guard.ts  session-init.ts
policy/: guard-patterns.json
scripts/: delegate.sh  flow-report.sh  mode.sh  ollama_agent.py  queue_delegate.sh  subagent_AGENTS.md  test-guard-patterns.sh  test-skill-rules.sh  tiered-proof.sh  verify-audit-chain.sh
skills/: SKILL.md  vue-development.md
skills/python/templates/: conftest.py  domain_model.py  main.py  patterns_example.py  pyproject.toml  test_example.py
(+437 files in other folders)
