[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "my-service"
version = "0.1.0"
description = "Short description"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "ANN", "B", "SIM", "TCH"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["my_service"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["my_service"]

[tool.coverage.report]
fail_under = 95
show_missing = true
